fix alignment

--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -1,6 +1,6 @@
 /** Basic results 'All' **/
 .result {
-  padding-left: 38px;
+  padding-left: 40px;
   padding-top: 10px;
 }
 
